fix layout inconsistency on firefox

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 .calculator-container {
   display: flex;
   flex-direction: column;
+  width: 300px;
+  margin: auto;
 }
 
 button {
